Update release notes (#33905)
* Update release notes

* Update release notes