@@ -4,53 +4,50 @@
 
 ### New Features
 
-1. Kernel: Add firebird sql parser module and database type [#33773](https://github.com/apache/shardingsphere/pull/33773)
+1. Kernel: Add firebird SQL parser module and database type [#33773](https://github.com/apache/shardingsphere/pull/33773)
 
 ### Enhancements
 
 1. Kernel: Add arguments not null check when creating RouteUnit - [#33382](https://github.com/apache/shardingsphere/pull/33382)
 1. Kernel: Add index columns not empty judgement for IndexColumnTokenGenerator - [#33384](https://github.com/apache/shardingsphere/pull/33384)
 1. Kernel: Add binding to owner table - [#33533](https://github.com/apache/shardingsphere/pull/33533)
+1. DistSQL: Check inline expression when create sharding table rule with inline sharding algorithm - [#33735](https://github.com/apache/shardingsphere/pull/33735)
 1. SQL Parser: Support parsing Doris BITXOR - [#33258](https://github.com/apache/shardingsphere/pull/33258)
 1. SQL Parser: Support parsing Doris INSTR - [#33289](https://github.com/apache/shardingsphere/pull/33289)
 1. SQL Parser: Support parsing Doris STRRIGHT - [#33393](https://github.com/apache/shardingsphere/pull/33393)
 1. SQL Parser: Support parsing MySQL by adding non-reserved keywords in BaseRule.g4 file according to MySQL 8.4 doc - [#33846](https://github.com/apache/shardingsphere/pull/33846)
+1. Storage: Support setting `hive_conf_list`, `hive_var_list` and `sess_var_list` for jdbcURL when connecting to HiveServer2 - [#33749](https://github.com/apache/shardingsphere/pull/33749)
+1. Storage: Support connecting to HiveServer2 through database connection pools other than HikariCP - [#33762](https://github.com/apache/shardingsphere/pull/33762)
+1. Storage: Partial support for connecting to embedded ClickHouse `chDB` - [#33786](https://github.com/apache/shardingsphere/pull/33786)
 1. SQL Federation: Upgrade calcite version to 1.38.0 and update all license info in LICENSE file - [#33279](https://github.com/apache/shardingsphere/pull/33279)
+1. Transaction: Bump the minimum Seata Client version for Seata AT integration to 2.2.0 - [#33872](https://github.com/apache/shardingsphere/pull/33872)
 1. JDBC: Add show database name for JDBC when execute SHOW COMPUTE NODES - [#33437](https://github.com/apache/shardingsphere/pull/33437)
 1. JDBC: Support ZonedDateTime on ResultSet - [#33660](https://github.com/apache/shardingsphere/issues/33660)
+1. Proxy: Add query parameters and check for MySQL kill processId - [#33274](https://github.com/apache/shardingsphere/pull/33274)
+1. Proxy: Support table not exist exception for PostgreSQL proxy - [#33885](https://github.com/apache/shardingsphere/pull/33274)
 1. Proxy Native: Change the Base Docker Image of ShardingSphere Proxy Native - [#33263](https://github.com/apache/shardingsphere/issues/33263)
-1. Proxy: Add query parameters and check for mysql kill processId - [#33274](https://github.com/apache/shardingsphere/pull/33274)
-1. Agent: Simplify the use of Agent's Docker Image - [#33356](https://github.com/apache/shardingsphere/pull/33356)
-1. Build: Avoid using `-proc:full` when compiling ShardingSphere with OpenJDK23 - [#33681](https://github.com/apache/shardingsphere/pull/33681)
-1. Doc: Adds documentation for HiveServer2 support - [#33717](https://github.com/apache/shardingsphere/pull/33717)
-1. DistSQL: Check inline expression when create sharding table rule with inline sharding algorithm - [#33735](https://github.com/apache/shardingsphere/pull/33735)
-1. Infra: Support setting `hive_conf_list`, `hive_var_list` and `sess_var_list` for jdbcURL when connecting to HiveServer2 - [#33749](https://github.com/apache/shardingsphere/pull/33749)
-1. Infra: Support connecting to HiveServer2 through database connection pools other than HikariCP - [#33762](https://github.com/apache/shardingsphere/pull/33762)
-1. Infra: Partial support for connecting to embedded ClickHouse `chDB` - [#33786](https://github.com/apache/shardingsphere/pull/33786)
 1. Proxy Native: Support connecting to HiveServer2 with ZooKeeper Service Discovery enabled in GraalVM Native Image - [#33768](https://github.com/apache/shardingsphere/pull/33768)
 1. Proxy Native: Support local transactions of ClickHouse under GraalVM Native Image - [#33801](https://github.com/apache/shardingsphere/pull/33801)
-1. Doc: Adds documentation for ClickHouse support - [#33779](https://github.com/apache/shardingsphere/pull/33779)
-1. Doc: Removes use of `iceberg.mr.schema.auto.conversion` from documentation due to HIVE-26507 - [#33828](https://github.com/apache/shardingsphere/pull/33828)
-1. Kernel: Bump the minimum Seata Client version for Seata AT integration to 2.2.0 - [#33872](https://github.com/apache/shardingsphere/pull/33872)
 1. Proxy Native: Support Seata AT integration under Proxy Native in GraalVM Native Image - [#33889](https://github.com/apache/shardingsphere/pull/33889)
+1. Agent: Simplify the use of Agent's Docker Image - [#33356](https://github.com/apache/shardingsphere/pull/33356)
 
 ### Bug Fixes
 
 1. Mode: Fixes `JDBCRepository` improper handling of H2-database in memory mode - [#33281](https://github.com/apache/shardingsphere/issues/33281)
-1. SQL Binder: Fix table does not exist exception when use HintManager#setDatabaseName to transparent - [#33370](https://github.com/apache/shardingsphere/pull/33370)
-1. SQL Parser: Fix LiteralExpressionSegment cast exception in sql parser. - [#33332](https://github.com/apache/shardingsphere/pull/33332)
-1. SQL Parser: Fix PostgreSQL and openGauss time extract function parse week and quarter error - [#33564](https://github.com/apache/shardingsphere/pull/33564)
-1. SQL Binder: Use Multimap and CaseInsensitiveString to replace CaseInsensitiveMap for supporting mysql multi table join with same table alias - [#33303](https://github.com/apache/shardingsphere/pull/33303)
-1. SQL Binder: Fix the combine statement cannot find the outer table when bind - [#33357](https://github.com/apache/shardingsphere/pull/33357)
-1. SQL Binder: Fix SQL performance issues caused by repeated subquery fetches - [#33361](https://github.com/apache/shardingsphere/pull/33361)
-1. Sharding: Remove ShardingRouteAlgorithmException check logic temporarily to support different actual table name config - [#33367](https://github.com/apache/shardingsphere/pull/33367)
-1. Sharding: Fix SQL COUNT with GROUP BY to prevent incorrect row returns - [#33380](https://github.com/apache/shardingsphere/pull/33380)
-1. Sharding: Fix avg, sum, min, max function return empty data when no query result return - [#33449](https://github.com/apache/shardingsphere/pull/33449)
-1. Encrypt: Fix merge exception without encrypt rule in database - [#33708](https://github.com/apache/shardingsphere/pull/33708)
-1. SQL Parser: Fix mysql parse zone unreserved keyword error - [#33720](https://github.com/apache/shardingsphere/pull/33720)
-1. Proxy: Fix BatchUpdateException when execute INSERT INTO ON DUPLICATE KEY UPDATE in proxy adapter - [#33796](https://github.com/apache/shardingsphere/pull/33796)
-1. Infra: Fix the issue that ShardingSphere cannot connect to HiveServer2 using remote Hive Metastore Server - [#33837](https://github.com/apache/shardingsphere/pull/33837)
-1. SQL Parser: Fix mysql range parse error when use table owner - [#33874](https://github.com/apache/shardingsphere/pull/33874)
+1. SQL Binder: Fixes table does not exist exception when use HintManager#setDatabaseName to transparent - [#33370](https://github.com/apache/shardingsphere/pull/33370)
+1. SQL Parser: Fixes LiteralExpressionSegment cast exception in SQL parser - [#33332](https://github.com/apache/shardingsphere/pull/33332)
+1. SQL Parser: Fixes PostgreSQL and openGauss time extract function parse week and quarter error - [#33564](https://github.com/apache/shardingsphere/pull/33564)
+1. SQL Binder: Use Multimap and CaseInsensitiveString to replace CaseInsensitiveMap for supporting MySQL multi table join with same table alias - [#33303](https://github.com/apache/shardingsphere/pull/33303)
+1. SQL Binder: Fixes the combine statement cannot find the outer table when bind - [#33357](https://github.com/apache/shardingsphere/pull/33357)
+1. SQL Binder: Fixes SQL performance issues caused by repeated subquery fetches - [#33361](https://github.com/apache/shardingsphere/pull/33361)
+1. SQL Parser: Fixes MySQL parse zone unreserved keyword error - [#33720](https://github.com/apache/shardingsphere/pull/33720)
+1. SQL Parser: Fixes MySQL range parse error when use table owner - [#33874](https://github.com/apache/shardingsphere/pull/33874)
+1. Storage: Fixes cannot connect to HiveServer2 using remote Hive Metastore Server - [#33837](https://github.com/apache/shardingsphere/pull/33837)
+1. Proxy: Fixes BatchUpdateException when execute INSERT INTO ON DUPLICATE KEY UPDATE in proxy adapter - [#33796](https://github.com/apache/shardingsphere/pull/33796)
+1. Sharding: Remove ShardingRouteAlgorithmException check logic temporarily to support different actual table name configuration - [#33367](https://github.com/apache/shardingsphere/pull/33367)
+1. Sharding: Fixes SQL COUNT with GROUP BY to prevent incorrect row returns - [#33380](https://github.com/apache/shardingsphere/pull/33380)
+1. Sharding: Fixes avg, sum, min, max function return empty data when no query result return - [#33449](https://github.com/apache/shardingsphere/pull/33449)
+1. Encrypt: Fixes merge exception without encrypt rule in database - [#33708](https://github.com/apache/shardingsphere/pull/33708)
 
 ### Change Logs
 
@@ -70,101 +67,101 @@
 
 ### Enhancements
 
-1. Pipeline: Add SHARDING_TOTAL_COUNT impl of JobExecutorServiceHandler to improve CPU core requirement
-1. Pipeline: Support page query for inventory dumper and data consistency streaming query
-1. Pipeline: Use case-insensitive identifiers to enhance the table metadata loader
-1. Pipeline: Support primary key columns ordering for standard pipeline table metadata loader
+1. Kernel: Support sql hint extract when sql contains dbeaver hint comment
+1. Kernel: Add extract combine left select in extractFromSelectStatementWithoutProjection method
+1. Metadata: Collect table type for PostgreSQL
+1. Metadata: Add assisted node to create and delete databases
+1. Mode: Change shadow、sharding's algorithms node path to shadow_algorithms and sharding_algorithms node path
 1. DistSQL: Check privilege when registering or altering storage unit
 1. DistSQL: Check duplicate actual data nodes when creating or altering sharding table rule
 1. DistSQL: Add like support for show storage units
 1. DistSQL: Rollback if import database configuration failed
-1. Proxy: Make the results of show tables in order
-1. Metadata: Collect table type for PostgreSQL
 1. DistSQL: add table type to result set of show logical tables
+1. Proxy: Make the results of show tables in order
 1. Proxy: Trigger metadata collection when creating and deleting database and table
 1. Proxy: Optimize Agent to support collecting metrics data from multiple data sources when used with Driver
-1. Encrypt: Add unsupported check for combine statement with encrypt columns
 1. SQL Parser: Support PostgreSQL COLLATION and CONSTRAINT keywords
-1. SQL Parser: Support Mysql change replication with no server ids
-1. SQL Parser: Support Mysql row and column aliases with ON DUPLICATE KEY UPDATE
-1. SQL Parser: Support Mysql CALL sql with mysql prefix
-1. SQL Parser: Support Mysql create loadable function returns int/dec
+1. SQL Parser: Support MySQL change replication with no server ids
+1. SQL Parser: Support MySQL row and column aliases with ON DUPLICATE KEY UPDATE
+1. SQL Parser: Support MySQL CALL SQL with mysql prefix
+1. SQL Parser: Support MySQL create loadable function returns int/dec
 1. SQL Parser: Support parsing MySQL CREATE TABLESPACE/TABLE in Mysql-8
 1. SQL Parser: Support parsing MySQL CREATE INDEX with ENGINE_ATTRIBUTE
 1. SQL Parser: Support parsing MySQL LOAD DATA with @ variable
 1. SQL Parser: Support parsing MySQL START REPLICA statement
 1. SQL Parser: Support parsing MySQL json table function
-1. Sharding: Revise all local index for sharding table and add object uniqueness level spi to control index token generator
 1. SQL Parser: Enhance mysql json function visit statement result
-1. SQL Federation: Support sql federation bit_count function for mysql
-1. SQL Federation: Improve atan and anan2 sql function for mysql
-1. Kernel: Support sql hint extract when sql contains dbeaver hint comment
-1. Encrypt: Support select distinct(column) encrypt rewrite and refactor SubstitutableColumnNameToken build logic
-1. SQL Federation: Support federated query mysql bin function
-1. Kernel: Add extract combine left select in extractFromSelectStatementWithoutProjection method
-1. Proxy Native: Add more graalvm reachability metadata for caffeine cache
 1. SQL Parser: Enhance Oracle update statement as alias parse and add test case
+1. SQL Parser: Add MySQL column not null SQL parsing
+1. SQL Parser: Add MySQL charset sql parsing
+1. SQL Parser: Support Oracle column length unit type SQL parsing
+1. SQL Parser: Support PostgreSQL, openGauss function table and update from parse
+1. SQL Parser: Support cte with postgres and openGauss
+1. SQL Parser: Optimize the timezone support of PostgreSQLDateValueParser
+1. SQL Parser: Support PostgreSQL limit and offset as null
+1. SQL Federation: Support SQL federation bit_count function for MySQL
+1. SQL Federation: Improve atan and anan2 sql function for MySQL
+1. SQL Federation: Support federated query mysql bin function
 1. SQL Federation: Support for federated query NOT operator
-1. Governance: Change shadow、sharding's algorithms node path to shadow_algorithms and sharding_algorithms node path
-1. Encrypt: Support like concat nested concat statement rewrite with encrypt feature
-1. Support PostgreSQL, openGauss function table and update from parse
-1. Add assisted node to create and delete databases
-1. Support cte with postgres and openGauss
-1. Optimize the timezone support of PostgreSQLDateValueParser.
-1. Sharding: Add NullsOrderType.LOW and NullsOrderType.HIGH to handle NULL order by in sharding feature
-1. Support oracle column length unit type SQL parsing
-1. Support postgresql limit and offset as null
-1. Add mysql column not null sql parsing
-1. Add mysql charset sql parsing
+1. Transaction: Support for switching transaction types
 1. Use same transaction type in one transaction in jdbc adapter
-1. Support for switching transaction types
+1. Proxy Native: Add more graalvm reachability metadata for caffeine cache
+1. Sharding: Revise all local index for sharding table and add object uniqueness level spi to control index token generator
+1. Sharding: Add NullsOrderType.LOW and NullsOrderType.HIGH to handle NULL order by in sharding feature
 1. Add inline sharding algorithms match actual data nodes check
+1. Encrypt: Add unsupported check for combine statement with encrypt columns
+1. Encrypt: Support select distinct(column) encrypt rewrite and refactor SubstitutableColumnNameToken build logic
+1. Encrypt: Support like concat nested concat statement rewrite with encrypt feature
+1. Pipeline: Add SHARDING_TOTAL_COUNT impl of JobExecutorServiceHandler to improve CPU core requirement
+1. Pipeline: Support page query for inventory dumper and data consistency streaming query
+1. Pipeline: Use case-insensitive identifiers to enhance the table metadata loader
+1. Pipeline: Support primary key columns ordering for standard pipeline table metadata loader
 
 ### Bug Fixes
 
-1. Pipeline: InventoryTaskSplitter compatible with `BigInteger` primary key
+1. Kernel: Replace ThreadLocal with TransmittableThreadLocal in HintManager to support cross Thread usage
+1. Kernel: Use ConnectionPropertiesParser spi to parse jdbcUrl to solve oracle url parse error
+1. Kernel: Fixes column count assert exception caused by postgresql system table judge
+1. Metadata: Keep in-used storage node when unregister storage unit
+1. Metadata: Fixes the generated key column name case insensitivity error
+1. SQL Parser: Support PostgreSQL do nothing conflict action
+1. SQL Parser: Fix oracle nvl function and interval hour parse error
+1. DistSQL: Fixes load single table error after creating logical data source
+1. DistSQL: Fixes set default single table storage unit to random failed
+1. DistSQL: Fixes set default single table storage unit to logical data source failed
+1. DistSQL: Fixes NPE when import metadata
+1. Fixes the problem of missing storage unit when registering storage unit
+1. SQL Binder: Add TableAvailable interface for CloseStatementContext, MoveStatementContext, FetchStatementContext and fix SQL rewrite test case
+1. SQL Federation: Fixes federated query LocalDateTime conversion
+1. SQL Federation: Fixes push down SQL execute error when sql contains chinese character with SQL federation
+1. SQL Federation: Fixes federation query binary type data query
+1. SQL Federation: Fixes null result in federated query for a single projected column
+1. SQL Federation: Fixes SQL federation unknown type exception caused by calcite wrong result type with bigint
+1. Transaction: Fixes savepoint manager not cleaned up in distributed transactions
+1. Transaction: Fixes PostgreSQL rollback only
+1. Transaction: Fixes transaction context not cleaned up when xa transaction is committed
+1. Transaction: Fixes setSavepoint method invocation not cleaning up
+1. Transaction: Fixes the issue that cursor is not rewritten
 1. Proxy: Support binary type bool value in PostgreSQL
 1. Proxy: Support array type prepared param in PostgreSQL
 1. Proxy: Support binary protocol value for text array in PostgreSQL
-1. Metadata: Keep in-used storage node when unregister storage unit
-1. Migration: Fix default data source lost when create migration job
-1. Proxy: Fix duplicate results when querying information_schema.SCHEMATA
-1. Proxy: Fix incorrect results for querying information_schema.SCHEMATA
-1. Proxy: Fix NPE when execute show table status
-1. Proxy: Fix no database selected exception occurs when show tables from db
-1. DistSQL: Fix load single table error after creating logical data source
-1. DistSQL: Fix set default single table storage unit to random failed
-1. DistSQL: Fix set default single table storage unit to logical data source failed
-1. DistSQL: Fix NPE when import metadata
-1. Proxy: Fix the error that the process does not exit after proxy startup fail
-1. Proxy: Fix the error that the persisted system metadata was not cleared after the database was deleted in the PostgreSQL scenario
-1. SQL Federation: Fix federated query LocalDateTime conversion
-1. SQL Federation: Fix push down sql execute error when sql contains chinese character with sql federation
-1. Encrypt: Fix show create table wrong result with encrypt when data type contains float
-1. SQL Parser: Support PostgreSQL do nothing conflict action
-1. Kernel: Replace ThreadLocal with TransmittableThreadLocal in HintManager to support cross Thread usage
-1. SQL Federation: Fix federation query binary type data query
-1. Kernel: Use ConnectionPropertiesParser spi to parse jdbcUrl to solve oracle url parse error
-1. Sharding: Fix Sharding column not tracked through aliases
-1. SQL Binder: Add TableAvailable interface for CloseStatementContext, MoveStatementContext, FetchStatementContext and fix sql rewrite test case
-1. Kernel: Fix column count assert exception caused by postgresql system table judge
-1. SQL Federation: Fix null result in federated query for a single projected column
-1. SQL Parser: Fix oracle nvl function and interval hour parse error
-1. Sharding: Fix alter view exception when config sharding rule and binding table rule
-1. SQL Federation: Fix sql federation unknown type exception caused by calcite wrong result type with bigint
-1. Fixed the problem of missing storage unit when registering storage unit
-1. Fix the issue where updating a non-encrypted table and using a subquery on an encrypted table.
-1. Resolve the issue where "zip file closed" in versions prior to SpringBoot 2.3.
-1. Fix the NPE when it does not contain a specified logic database in Driver.
-1. Fix is need accumulate logic
-1. Fix setSavepoint method invocation not cleaning up
-1. Add insert select rewrite for encrypt
-1. Fix the generated key column name case insensitivity error
-1. Fix no database selected exception in the query sql
-1. Fix savepoint manager not cleaned up in distributed transactions
-1. Fix postgresql rollback only
-1. Fix transaction context not cleaned up when xa transaction is committed
-1. Fix the issue that cursor is not rewritten
+1. Proxy: Fixes duplicate results when querying information_schema.SCHEMATA
+1. Proxy: Fixes incorrect results for querying information_schema.SCHEMATA
+1. Proxy: Fixes NPE when execute show table status
+1. Proxy: Fixes no database selected exception occurs when show tables from database
+1. Proxy: Fixes the error that the process does not exit after proxy startup fail
+1. Proxy: Fixes the error that the persisted system metadata was not cleared after the database was deleted in the PostgreSQL scenario
+1. Proxy: Fixes no database selected exception in the query SQL
+1. JDBC: Fixes the NPE when it does not contain a specified logic database in Driver
+1. Sharding: Fixes Sharding column not tracked through aliases
+1. Sharding: Fixes alter view exception when config sharding rule and binding table rule
+1. Sharding: Fixes is need accumulate logic
+1. Encrypt: Fixes show create table wrong result with encrypt when data type contains float
+1. Encrypt: Add insert select rewrite for encrypt
+1. Encrypt: Fixes the issue where updating a non-encrypted table and using a subquery on an encrypted table
+1. Pipeline: Fixes default data source lost when create migration job
+1. Pipeline: InventoryTaskSplitter compatible with `BigInteger` primary key
+1. Resolve the issue where "zip file closed" in versions prior to SpringBoot 2.3
 
 ### Change Log
 
@@ -173,27 +170,20 @@
 ## Release 5.5.0
 
 ### API Changes
+
+1. Kernel: Remove the sqlCommentParseEnabled configuration in SQL Parser Rule to reduce code complexity
+1. SQL Parser: Consider removing sqlCommentParseEnabled config in SQLParser rule
+1. Federation: Add allQueryUseSQLFederation config for sql federation
 1. Proxy: Remove the outdated schemaName configuration of the Proxy
-2. Kernel: Remove the sqlCommentParseEnabled configuration in SQL Parser Rule to reduce code complexity
-3. SQL Parser: Consider removing sqlCommentParseEnabled config in SQLParser rule
-4. Federation: Add allQueryUseSQLFederation config for sql federation
 
 ### New Features
+
 1. DistSQL: New syntax for query plugin (SPI) implementation
 1. DistSQL: New syntax for managing SQL_TRANSLATOR rule
 
 ### Enhancements
-1. Pipeline: Improve CDC stability and performance
-1. Pipeline: MemoryPipelineChannel supports configurable zero queue size for less memory consumption
-1. Pipeline: Show dedicated error when mode type is not Cluster
+
 1. Authority: Add isSuper option for user
-1. Pipeline: Ignore error message in status DistSQL result on job cancelling
-1. DistSQL: Use JSON format to output props in RQL
-1. DistSQL: Optimize REFRESH DATABASE METADATA logic
-1. DistSQL: SHOW COMPUTE NODES supports JDBC nodes
-1. DistSQL: Optimize syntax of REFRESH DATABASE METADATA
-1. DistSQL: Optimize the output of SHOW TABLE METADATA
-1. Proxy: Add MySQL precompiled parameter verification to avoid turning on rewriteBatchedStatements=true when BenchmarkSQL connects to Proxy, causing an ArrayIndexOutOfBoundsException exception when the Proxy parameterCount exceeds 65535.
 1. SQL Parser: Add EOF to throw exception when parse distsql rollback migration statement
 1. SQL Parser: Support more plsql statement parse and add plsql parse assert logic
 1. SQL Parser: Support parse index hint
@@ -203,33 +193,44 @@
 1. SQL Parser: Fix sqlServer unqualified shorthand parsing
 1. SQL Parser: Support sqlServer SEARCH unreserved word parsing
 1. SQL Parser: Add sql server MEMBER unreserved word
-1. Binder: Add ParameterMarkerSegmentBinder logic for Oracle MergeStatementBinder
-1. Federation: Support mysql cross join statement for sql federation
+1. DistSQL: Use JSON format to output props in RQL
+1. DistSQL: Optimize REFRESH DATABASE METADATA logic
+1. DistSQL: SHOW COMPUTE NODES supports JDBC nodes
+1. DistSQL: Optimize syntax of REFRESH DATABASE METADATA
+1. DistSQL: Optimize the output of SHOW TABLE METADATA
+1. SQL Binder: Add ParameterMarkerSegmentBinder logic for Oracle MergeStatementBinder
+1. SQL Federation: Support mysql cross join statement for sql federation
 1. Transaction: Add advice message in XATransactionCheckPrivilegeFailedException
+1. Proxy: Add MySQL precompiled parameter verification to avoid turning on rewriteBatchedStatements=true when BenchmarkSQL connects to Proxy, causing an ArrayIndexOutOfBoundsException exception when the Proxy parameterCount exceeds 65535.
+1. Proxy: Fix mysql client multi statements option in protocol
 1. Sharding: Validate duplicate sharding actual data nodes
 1. Sharding: Support null condition value routing
-1. Proxy: Fix mysql client multi statements option in protocol
+1. Pipeline: Improve CDC stability and performance
+1. Pipeline: MemoryPipelineChannel supports configurable zero queue size for less memory consumption
+1. Pipeline: Show dedicated error when mode type is not Cluster
+1. Pipeline: Ignore error message in status DistSQL result on job cancelling
 
 ### Bug Fixes
-1. Pipeline: Fix commit/rollback migration job doesn't drop related consistency check job when check job is not completed
-1. Pipeline: Fix show consistency check status stop_time display
+
+1. MetaData: Fixes database system schema is not built when create database
+1. Metadata: Fixes NPE of system schema builder rule
+1. Governance: Fixes thread blocking problem when create logic database for Etcd register center
+1. Governance：Fixes register storage units and create feature rules failure when use Standalone mode
+1. SQL Parser: Fixes PostgreSQL NPE when parse columnRef
+1. SQL Parser: Fixes npe cause by parse MySQL select window statement
+1. SQL Federation: Fixes Object 'DUAL' not found exception when execute select 1 from dual with sql federation
+1. Transaction: Fixes xa auto commit in executeQuery
 1. Proxy: Restore original databaseName in connectionSession after unicast
-1. Proxy: Fix show tables can be executed without use database
-1. Proxy: Fix the incorrect current database after unicast routing
-1. Proxy: Fix the problem that show tables can be executed before use database
+1. Proxy: Fixes show tables can be executed without use database
+1. Proxy: Fixes the incorrect current database after unicast routing
+1. Proxy: Fixes the problem that show tables can be executed before use database
+1. Proxy: Fixes multi statements with specified database name
+1. Sharding: Fixes routing error when joining tables in uppercase
+1. Sharding: Fixes drop sharding table exception when table name is uppercase
+1. Sharding: Fixes generated key with upper case column name
 1. Readwrite-splitting: Fix check exception when using shadow data source
-1. Governance: Fix thread blocking problem when create logic database for Etcd register center
-1. Governance：Fix register storage units and create feature rules failure when use Standalone mode
-1. MetaData: Fix database system schema is not built when create database
-1. Metadata: Fix NPE of system schema builder rule
-1. SQL Parser: Fix PostgreSQL NPE when parse columnRef
-1. SQL Parser: Fix npe cause by parse MySQL select window statement
-1. Sharding: Fix routing error when joining tables in uppercase
-1. Sharding: Fix drop sharding table exception when table name is uppercase
-1. Sharding: Fix generated key with upper case column name
-1. Federation: Fix Object 'DUAL' not found exception when execute select 1 from dual with sql federation
-1. Transaction: Fix xa auto commit in executeQuery
-1. Proxy: Fix multi statements with specified database name
+1. Pipeline: Fixes commit/rollback migration job doesn't drop related consistency check job when check job is not completed
+1. Pipeline: Fixes show consistency check status stop_time display
 
 ### Change Log
 
@@ -239,26 +240,29 @@
 ## Release 5.4.1
 
 ### New Features
-1. Proxy: Supports dbcp and c3p0 connection pools
+
 1. Metadata: Standalone mode adapts to metadata new structure
 1. Governance: Governance supports register instance level data source
+1. Proxy: Supports dbcp and c3p0 connection pools
 
 ### Enhancements
+
 1. Mode: Improve Standalone mode JDBC type impl reset data on initialization
-1. Scaling: Isolate ShardingSphereDataSource Standalone repository in pipeline
-1. Scaling: Disable system-schema-metadata-enabled in pipeline
 1. JDBC: Move jdbc core META-INF/services/java.sql.Driver from test to main
-1. Scaling: Add algorithm columns in SHOW MIGRATION CHECK ALGORITHMS DistSQL result
-1. Scaling: Add type_alias column in SHOW MIGRATION CHECK ALGORITHMS DistSQL result
 1. Encrypt: Add duplicate name check for derived columns and logical columns
 1. Encrypt: Deny DDL for cipher columns in Proxy
 1. Encrypt: Add the default type for derived columns to varchar(4000)
+1. Pipeline: Isolate ShardingSphereDataSource Standalone repository in pipeline
+1. Pipeline: Disable system-schema-metadata-enabled in pipeline
+1. Pipeline: Add algorithm columns in SHOW MIGRATION CHECK ALGORITHMS DistSQL result
+1. Pipeline: Add type_alias column in SHOW MIGRATION CHECK ALGORITHMS DistSQL result
 
 ### Bug Fixes
-1. Scaling: Fix get inventory position not correctly on breakpoint resuming when table names are similar
-1. Scaling: Fix CDC importer not start on breakpoint resuming when first inventory task is finished
-1. Single Table: Fix not switched active version when CREATE/DROP table modifies the Single rule configuration
-1. JDBC: Fix JDBC memory leak with MySQL in the 5.4.0 version
+
+1. Single Table: Fixes not switched active version when CREATE/DROP table modifies the Single rule configuration
+1. JDBC: Fixes JDBC memory leak with MySQL in the 5.4.0 version
+1. Pipeline: Fixes get inventory position not correctly on breakpoint resuming when table names are similar
+1. Pipeline: Fixes CDC importer not start on breakpoint resuming when first inventory task is finished
 
 ### Change Log
 
@@ -268,6 +272,7 @@
 ## Release 5.4.0
 
 ### API Changes
+
 1. Metadata: Change sharding broadcast tables to global broadcast tables
 1. JDBC: Remove exclamation mark (!) for global rules
 1. DistSQL: Simplify keywords ASSISTED_QUERY, LIKE_QUERY in encrypt DistSQL
@@ -282,10 +287,12 @@
 1. Sharding: Merge ShardingCacheRule into ShardingRule (Experimental)
 
 ### New Features
+
 1. DistSQL: New syntax to manage SQL_FEDERATION rule
 1. Proxy: Support Unix Domain Socket
 
 ### Enhancements
+
 1. Scaling: CDC supports pure incremental mode
 1. Scaling: CDC supports exporting data by transaction
 1. Scaling: CDC supports MySQL and PostgreSQL
